# scara_teleoperado

./: README.md  transmissor_controle.py  udp_scara.py
src/scara_description/: CMakeLists.txt  README.md  package.xml
src/scara_description/config/: reload_urdf.sh  scara_controllers.yaml
src/scara_description/launch/: controller.launch.py  display.launch.py  gazebo.launch.py
src/scara_description/meshes/: as.stl  bs.stl  cs.stl  es.stl  g1.stl  g2.stl  g3.stl
src/scara_description/rviz/: scara.rviz
src/scara_description/urdf/: scara.urdf.xacro  scara_gazebo.xacro  scara_ros2_control.xacro
